@@ -3,7 +3,11 @@
 
 #include <string>
 #include <utility>
+#include <unordered_map>
 #include "abstract_deserializable.hpp"
+#include "pokemon_moves_data.hpp"
+#include "pokemon_stats_data.hpp"
+#include "pokemon_species_data.hpp"
 
 #define POKEMON_DATA_CSV_NAME "pokemon.csv"
 
@@ -17,6 +21,18 @@ public:
     int baseExperience;
     int order;
     bool isDefault;
+
+    // Relationship to other data objects
+
+    // Relation entity between the N:N relationship from Pokemon to Moves
+    std::unordered_map<int, std::shared_ptr<PokemonMovesRelation>> movesTable {};
+
+    // Relation entity between the N:N relationship from Pokemon to Stats
+    std::unordered_map<int, std::shared_ptr<PokemonStatsRelation>> statsTable {};
+
+    // N:1 relationship
+    std::shared_ptr<PokemonSpeciesData> speciesData = nullptr;
+
 
     PokemonData(
         int id,
@@ -36,6 +52,7 @@ public:
         baseExperience(baseExperience),
         order(order),
         isDefault(isDefault) {}
+
 
     void printSelf() const override;
 
