@@ -3,17 +3,20 @@
 
 #include <string>
 #include "abstract_deserializable.hpp"
+#include "stats_data.h"
 
 #define POKEMON_STATS_DATA_CSV_NAME "pokemon_stats.csv"
 
-class PokemonStatsData : public AbstractDeserializable {
+class PokemonStatsRelation : public AbstractDeserializable {
 public:
     int pokemonId;
     int statId;
     int baseStat;
     int effort;
 
-    PokemonStatsData(
+    std::shared_ptr<StatsData> statsEntry = nullptr;
+
+    PokemonStatsRelation(
         int pokemonId,
         int statId,
         int baseStat,
@@ -26,7 +29,7 @@ public:
 
     void printSelf() const override;
 
-    [[maybe_unused]] static PokemonStatsData* deserialize(const std::string &line);
+    [[maybe_unused]] static PokemonStatsRelation* deserialize(const std::string &line);
 };
 
 #endif
