@@ -4,8 +4,8 @@
 #include <ncurses.h>
 #include "world/mapbuilder.hpp"
 
-#define RDYLGN10_PALETTE_OFFSET 100
-#define RDYLGN10_PALETTE_COUNT 20
+#define GISTNCAR_PALETTE_OFFSET 100
+#define GISTNCAR_PALETTE_COUNT 20
 #define PRGN10_PALETTE_OFFSET 120
 #define PRGN10_PALETTE_COUNT 20
 
