@@ -1,0 +1,11 @@
+#ifndef POKEMON_H
+#define POKEMON_H
+
+#include "deserialization/pokemon_data.hpp"
+
+class Pokemon {
+public:
+    PokemonData* data;
+};
+
+#endif
