@@ -1,0 +1,8 @@
+#ifndef FILES_H
+#define FILES_H
+
+#include <filesystem>
+
+std::filesystem::path findCsvFile(const std::string &filename);
+
+#endif
