@@ -39,58 +39,38 @@ void initializeExtendedColors() {
 
     // Sequential color maps for drawing numerical bars
 
-    // Derived from the "RdYlGn_10" color scheme
-    // From colorbrew, licensed under CC0 (public domain); distributed by ColorSchemes.jl
-    // The original palette is
-    // #a50026, #d73027, #f46d43, #fdae61, #fee08b,
-    // #d9ef8b, #a6d96a, #66bd63, #1a9850, #006837
-    init_pair(RDYLGN10_PALETTE_OFFSET + 0,  40, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 1,  46, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 2,  82, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 3,  192, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 4,  184, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 5,  178, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 6,  208, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 7,  202, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 8,  196, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 9,  197, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 10, 199, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 11, 200, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 12, 201, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 13, 201, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 14, 129, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 15, 129, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 16, 126, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 17, 126, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 18, 90, COLOR_BLACK);
-    init_pair(RDYLGN10_PALETTE_OFFSET + 19, 239, COLOR_BLACK);
+    // Derived from the "gist_ncar" color scheme
+    // From matplotlib, licensed under CC0 (public domain).
+    // The original palette can be found at
+    // https://matplotlib.org/stable/users/explain/colors/colormaps.html#miscellaneous
+    const short gistNcarColors[] = {
+        40, 46, 82, 192, 184,
+        178, 208, 202, 196, 197,
+        199, 200, 201, 201, 129,
+        129, 126, 126, 90, 239
+    };
+
+    for (int i = 0; i < GISTNCAR_PALETTE_COUNT; i++) {
+        init_pair(GISTNCAR_PALETTE_OFFSET + i, gistNcarColors[i], COLOR_BLACK);
+    }
 
     // Derived from the "PRGn_10" color scheme
-    // From colorbrew, licensed under CC0 (public domain); distributed by ColorSchemes.jl
+    // From colorbrewer, licensed under CC0 (public domain); distributed by ColorSchemes.jl
     // The original palette is
     // #40004b, #762a83, #9970ab, #c2a5cf, #e7d4e8,
     // #d9f0d3, #a6dba0, #5aae61, #1b7837, #00441b
-    init_pair(PRGN10_PALETTE_OFFSET + 0, 91, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 1, 97, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 2, 103, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 3, 146, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 4, 194, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 5, 192, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 6, 155, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 7, 119, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 8, 118, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 9, 82, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 10, 46, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 11, 40, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 12, 34, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 13, 28, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 14, 22, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 15, 22, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 16, 22, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 17, 23, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 18, 23, COLOR_BLACK);
-    init_pair(PRGN10_PALETTE_OFFSET + 19, 23, COLOR_BLACK);
+    // It can also be found at
+    // https://docs.juliaplots.org/latest/generated/colorschemes#colorbrewer
+    const short prGn10Colors[] = {
+        91, 97, 103, 146, 194,
+        192, 155, 119, 118, 82,
+        46, 40, 34, 28, 22,
+        22, 22, 23, 23, 23,
+    };
 
+    for (int i = 0; i < PRGN10_PALETTE_COUNT; i++) {
+        init_pair(PRGN10_PALETTE_OFFSET + i, prGn10Colors[i], COLOR_BLACK);
+    }
 }
 
 // @formatter:off
