@@ -78,7 +78,7 @@ int main(int argc, char* argv[]) {
     // Overrides for the center map
     map->mapSeed = timeSeedMilli; // NOLINT(*-narrowing-conversions)
     map->name = "PALLET TOWN";
-    map->wildernessLevel = 0.0725;
+map->wildernessLevel = 0.1025;
     map->menaceLevel = 10;
 
     // Generate the first map outside the game loop, prevents it from regenerating in the game loop.
