@@ -11,28 +11,22 @@
 #define MAX_FRAME_COUNT 6572
 #define MAX_ITER_MULTIPLIER 8
 #define OVERGROWTH_FACTOR 12.6277f
-
 #define FIRST_PASS_NUM_TYPES 4
-
 #define BUILDING_FALLOFF_FACTOR 63.85f
 #define BUILDING_FALLOFF_INTERCEPT 70.85f
-
 #define NOISE_DENSITY 17
 #define NOISE_SCALE 1.035f
 #define NOISE_LACUNARITY 10.1042f
-
 #define SCATTER_BOULDER_COUNT 24
 #define SCATTER_BOULDER_VARIABILITY 5
 #define SCATTER_BOULDER_ON_WATER_PROBABILITY 0.1277f
 #define SCATTER_BOULDER_MAX_RADIUS 2.13f
 #define PURPLE_BOULDER_PROBABILITY 0.0159f
-
 #define DISTORTION_EXP_PROBABILITY 0.7563f
 #define DISTORTION_ITERATIONS_BASELINE 100
 #define DISTORTION_PADDING 2
 #define DISTORTION_KERNEL_RADIUS_SQ 4.85f
 #define DISTORTION_ENERGY 3.1416f
-
 #define BLEND_BOULDER_SPREAD_PROBABILITY 0.2192f
 #define BLEND_BOULDER_EROSION_PROBABILITY 0.2111f
 #define BLEND_BOULDER_WATER_EROSION_PROBABILITY 0.1511f
@@ -41,24 +35,19 @@
 #define BLEND_TREE_SPREAD_PROBABILITY 0.1627f
 #define BLEND_TREE_SPREAD_ENVIRONMENTAL_BONUS 1.2621f
 #define BLEND_FLAT_SPREAD_PROBABILITY 0.5522f
-
 #define ROAD_MOMENTUM_COEFF 0.7621f
 #define ROAD_DRIFT_FACTOR 0.121f
 #define ROAD_KICK_FACTOR 3.12f
 #define ROAD_TARGET_ATTRACTION_FACTOR 2.2572f
-
 #define EDGE_STUB_PADDING_X 13
 #define EDGE_STUB_PADDING_Y 6
 #define EDGE_WEST_BITMASK 1u
 #define EDGE_EAST_BITMASK 2u
 #define EDGE_SOUTH_BITMASK 4u
 #define EDGE_NORTH_BITMASK 8u
-
 #define VORONOI_POINTS_BASE_SEED 21679733
-
 #define WILDERNESS_LEVEL_LOWER_BOUND 0.0425f
 #define WILDERNESS_LEVEL_UPPER_BOUND 0.1625f
-
 #define MENACE_INITIAL_PERTURBATION_SCALAR_FACTOR 0.1375f
 #define MENACE_SALIENT_MAP_BONUS 38.71f
 
@@ -80,7 +69,7 @@ Map::Map(int globalX, int globalY, int initialSeed) {
     this->mapSeed = globalHashFunction(globalX, globalY, initialSeed);
     this->overgrowth = OVERGROWTH_FACTOR * sqrtf(dist) * randomFloat(0.55f, 3.25f);
     this->menaceLevel = getMenaceLevel(globalX, globalY, eccentricity, GAME.world->worldSeed);
-this->wildernessLevel = randomFloat(WILDERNESS_LEVEL_LOWER_BOUND, WILDERNESS_LEVEL_UPPER_BOUND)
+    this->wildernessLevel = randomFloat(WILDERNESS_LEVEL_LOWER_BOUND, WILDERNESS_LEVEL_UPPER_BOUND)
                             + overgrowth / 2100.0f;
 
     this->numOpponents = 0;
