@@ -136,3 +136,4 @@
 * Day 1 (2024-04-10)
     Afternoon:
     - Added more attributes to each map for spawn
+    - World map displays more information
